kustomize/overlays/prod/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetcare-data-harvest
  labels:
    app: fleetcare-data-harvest-prod
spec:
  selector:
    matchLabels:
      app: fleetcare-data-harvest-prod
  template:
    metadata:
      labels:
        app: fleetcare-data-harvest-prod
    spec:
      containers:
      - name: fleetcare-data-harvest
        imagePullPolicy: Always
