kustomize/overlays/prod/webserver_patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetcare-data-harvest
spec:
  template:
    spec:
      containers:
        - name: fleetcare-data-harvest
          imagePullPolicy: IfNotPresent
