kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetcare-data-harvest-clusterip
spec:
  type: ClusterIP
  selector:
    app: fleetcare-data-harvest
    variant: prod
