kustomize/overlays/prod/service_patch.yml
apiVersion: v1
kind: Service
metadata:
  name: fleetcare-data-harvest
spec:
  type: ClusterIP
  selector:
    app: fleetcare-data-harvest
    variant: prod
